compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__pub_module_fn.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"./utils\", \"inspect\")\npub fn show(x: anything) -> Nil"
snapshot_kind: text
---
----- SOURCE CODE

@external(nix, "./utils", "inspect")
pub fn show(x: anything) -> Nil

----- COMPILED NIX
let show = (builtins.import ./utils).inspect; in { inherit show; }
