compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__target_nix.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@target(nix)\npub fn nix_only() {\n  10\n}\n\npub fn func() {\n  nix_only()\n}"
---
----- SOURCE CODE

@target(nix)
pub fn nix_only() {
  10
}

pub fn func() {
  nix_only()
}

----- COMPILED NIX
let nix_only = { }: 10; func = { }: nix_only { }; in { inherit nix_only func; }
