compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__type_.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: pub type Thing
snapshot_kind: text
---
----- SOURCE CODE
pub type Thing

----- COMPILED NIX
{ }
